[package]
name = "fix"
version = "0.1.0"
authors = ["sfortas <sebastien.fortas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.epoll]
path = "../epoll"

[dependencies]
libc = "0.2.98"

[profile.release]
opt-level = 3
